- Removed building of the unused Offline.jar from the Ant build script and removed the Offline class  - Added a help link to http://www.ga.gov.au/apps/world-wind/help/index.jsp  - Added the ability to customise (within the theme.xml file) the layer persistance file that the layers panel saves to (including disable layer persistance altogether)  - Added the ability to add cache locations in the theme.xml file  - Fixed the DefaultLauncher with file:/ URLs (Desktop class seems to be broken?)
git-svn-id: svn://localhost/Software/Java/WorldWind@794 4cd5884b-1955-4949-bbec-e4dd67779ed6