@@ -2,7 +2,6 @@ package au.gov.ga.worldwind.util;
 
 import java.io.File;
 import java.lang.reflect.Method;
-import java.net.URI;
 import java.net.URL;
 
 import javax.swing.JOptionPane;
@@ -12,21 +11,20 @@ public class DefaultLauncher
 	public static void openFile(final File file)
 	{
 		boolean desktopSupported = false;
-		try
+		/*try
 		{
 			Class<?> desktopClass = getDesktopClassIfSupported();
 			Object desktopInstance = getDesktopInstance(desktopClass);
 			if (desktopClass != null && desktopInstance != null)
 			{
-				Method openMethod = desktopClass.getMethod("open",
-						new Class<?>[] { File.class });
+				Method openMethod = desktopClass.getMethod("open", new Class<?>[] { File.class });
 				openMethod.invoke(desktopInstance, new Object[] { file });
 				desktopSupported = true;
 			}
 		}
 		catch (Exception cnfe)
 		{
-		}
+		}*/
 
 		if (!desktopSupported)
 		{
@@ -40,8 +38,7 @@ public class DefaultLauncher
 					{
 						if (osName.startsWith("windows"))
 						{
-							Runtime.getRuntime().exec(
-									"cmd.exe /C " + file.getAbsolutePath());
+							Runtime.getRuntime().exec("cmd.exe /C " + file.getAbsolutePath());
 						}
 						else if (osName.startsWith("mac"))
 						{
@@ -54,9 +51,8 @@ public class DefaultLauncher
 					}
 					catch (Exception e)
 					{
-						JOptionPane.showMessageDialog(null,
-								"Error attempting to open file" + ":\n"
-										+ e.getLocalizedMessage());
+						JOptionPane.showMessageDialog(null, "Error attempting to open file" + ":\n"
+								+ e.getLocalizedMessage());
 					}
 				}
 			};
@@ -67,8 +63,22 @@ public class DefaultLauncher
 
 	public static void openURL(final URL url)
 	{
+		/*if ("file".equalsIgnoreCase(url.getProtocol()))
+		{
+			try
+			{
+				File file = new File(url.toURI());
+				System.out.println(file.getAbsolutePath());
+				openFile(file);
+				return;
+			}
+			catch (URISyntaxException e)
+			{
+			}
+		}*/
+
 		boolean desktopSupported = false;
-		try
+		/*try
 		{
 			Class<?> desktopClass = getDesktopClassIfSupported();
 			Object desktopInstance = getDesktopInstance(desktopClass);
@@ -77,8 +87,7 @@ public class DefaultLauncher
 				String methodName = "browse";
 				if (url.toExternalForm().toLowerCase().startsWith("mailto:"))
 					methodName = "mail";
-				Method method = desktopClass.getMethod(methodName,
-						new Class<?>[] { URI.class });
+				Method method = desktopClass.getMethod(methodName, new Class<?>[] { URI.class });
 				URI uri = url.toURI();
 				method.invoke(desktopInstance, new Object[] { uri });
 				desktopSupported = true;
@@ -86,7 +95,7 @@ public class DefaultLauncher
 		}
 		catch (Exception cnfe)
 		{
-		}
+		}*/
 
 		if (!desktopSupported)
 		{
@@ -101,8 +110,7 @@ public class DefaultLauncher
 						if (osName.startsWith("windows"))
 						{
 							Runtime.getRuntime().exec(
-									"rundll32 url.dll,FileProtocolHandler "
-											+ url.toExternalForm());
+									"rundll32 url.dll,FileProtocolHandler " + url.toExternalForm());
 						}
 						else if (osName.startsWith("mac"))
 						{
@@ -115,9 +123,10 @@ public class DefaultLauncher
 					}
 					catch (Exception e)
 					{
-						JOptionPane.showMessageDialog(null,
-								"Error attempting to launch web browser"
-										+ ":\n" + e.getLocalizedMessage());
+						JOptionPane.showMessageDialog(
+								null,
+								"Error attempting to launch web browser" + ":\n"
+										+ e.getLocalizedMessage());
 					}
 				}
 			};
@@ -126,17 +135,15 @@ public class DefaultLauncher
 		}
 	}
 
-	private static Class<?> getDesktopClassIfSupported()
+	protected static Class<?> getDesktopClassIfSupported()
 	{
 		try
 		{
 			Class<?> desktopClass = Class.forName("java.awt.Desktop");
-			Method isDesktopSupportedMethod = desktopClass.getMethod(
-					"isDesktopSupported", new Class<?>[] {});
-			Object isSupported = isDesktopSupportedMethod.invoke(null,
-					new Object[] {});
-			if (isSupported instanceof Boolean
-					&& ((Boolean) isSupported).booleanValue() == true)
+			Method isDesktopSupportedMethod =
+					desktopClass.getMethod("isDesktopSupported", new Class<?>[] {});
+			Object isSupported = isDesktopSupportedMethod.invoke(null, new Object[] {});
+			if (isSupported instanceof Boolean && ((Boolean) isSupported).booleanValue() == true)
 				return desktopClass;
 		}
 		catch (Exception e)
@@ -145,16 +152,14 @@ public class DefaultLauncher
 		return null;
 	}
 
-	private static Object getDesktopInstance(Class<?> desktopClass)
+	protected static Object getDesktopInstance(Class<?> desktopClass)
 	{
 		if (desktopClass != null)
 		{
 			try
 			{
-				Method getDesktopMethod = desktopClass.getMethod("getDesktop",
-						new Class<?>[] {});
-				Object desktopInstance = getDesktopMethod.invoke(null,
-						new Object[] {});
+				Method getDesktopMethod = desktopClass.getMethod("getDesktop", new Class<?>[] {});
+				Object desktopInstance = getDesktopMethod.invoke(null, new Object[] {});
 				return desktopInstance;
 			}
 			catch (Exception e)
@@ -167,26 +172,23 @@ public class DefaultLauncher
 	private static void macFileManagerOpen(URL url) throws Exception
 	{
 		Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
-		Method openURL = fileMgr.getDeclaredMethod("openURL",
-				new Class[] { String.class });
+		Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[] { String.class });
 		openURL.invoke(null, new Object[] { url.toExternalForm() });
 	}
 
 	private static void linuxBrowserOpen(URL url) throws Exception
 	{
-		String[] browsers = { "firefox", "opera", "konqueror", "epiphany",
-				"mozilla", "netscape" };
+		String[] browsers = { "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape" };
 		String browser = null;
 		for (int count = 0; count < browsers.length && browser == null; count++)
-			if (Runtime.getRuntime().exec(
-					new String[] { "which", browsers[count] }).waitFor() == 0)
+			if (Runtime.getRuntime().exec(new String[] { "which", browsers[count] }).waitFor() == 0)
 				browser = browsers[count];
 		if (browser == null)
 			throw new Exception("Could not find web browser");
 		else
 		{
-			Process process = Runtime.getRuntime().exec(
-					new String[] { browser, url.toExternalForm() });
+			Process process =
+					Runtime.getRuntime().exec(new String[] { browser, url.toExternalForm() });
 			new InputStreamGobbler(process.getInputStream());
 			new InputStreamGobbler(process.getErrorStream());
 		}
